--- a/style.css
+++ b/style.css
@@ -1,3 +1,56 @@
 #heading{
   color:red;
 }
+
+.header{
+  height:90px;
+  border: 1px solid;
+  display: flex;
+  justify-content: space-between; 
+}
+
+.logo-container{
+  height:90px;
+}
+
+.nav-items > ul{
+  display: flex;
+  list-style: none;
+}
+
+.nav-items > ul > li{
+  padding: 10px;
+  margin: 10px;
+}
+
+#search-box{
+  margin: 15px;
+  padding: 5px;
+}
+
+#res-img{
+  width: 100%;
+  height: 160px;
+}
+
+.body{
+  margin: 20px;
+}
+
+.res-container{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.res-card{
+  padding: 5px;
+  margin: 15px;
+  height: 300px;
+  width: 200px;
+  background-color: #dedede;
+}
+
+.res-card:hover{
+  cursor: pointer;
+  border: 1px solid;
+}
