Implemented config driven ui through swiggy API

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@
 .res-card{
   padding: 5px;
   margin: 15px;
-  height: 300px;
+  height: 340px;
   width: 200px;
   background-color: #dedede;
 }
@@ -53,4 +53,12 @@
 .res-card:hover{
   cursor: pointer;
   border: 1px solid;
+}
+
+.rating-delivery {
+  display: flex;
+  align-items: center;
+}
+.rating-delivery h4 {
+  margin-right: 10px;
 }
